# openapi.yaml
@@ -99,6 +99,8 @@ paths:
           description: Invalid access value
         '401':
           description: Unauthorized
+        '403':
+          description: Access denied
   /advertisement/findByUser:
     get:
       tags:
@@ -126,7 +128,7 @@ paths:
                 items:
                   $ref: '#/components/schemas/Advertisement'
         '400':
-          description: Invalid username
+          description: Ads doesn't exists
       security:
         - api_key: []
   /advertisement/:
@@ -155,8 +157,7 @@ paths:
           description: Invalid ID supplied
         '403':
           description: Access denied
-        '404':
-          description: Advertisement not found
+
       security:
         - api_key: []
     put:
@@ -261,8 +262,10 @@ paths:
             application/xml:
               schema:
                 $ref: '#/components/schemas/Category'
-        '405':
+        '400':
           description: Invalid input
+        '401':
+          description: Not logged in
       security:
         - api_key: []
   /category:
@@ -288,10 +291,10 @@ paths:
               schema:
                 $ref: '#/components/schemas/Category'
 
-        '403':
-          description: Access denied
-        '404':
-          description: User not found
+        '401':
+          description: Not logged in
+        '405':
+          description: Category doesn't exists
       security:
           - api_key: []
     get:
@@ -317,12 +320,10 @@ paths:
                 $ref: '#/components/schemas/Category'
         '400':
           description: Invalid ID supplied
-        '403':
-          description: Access denied
-        '404':
+
+        '405':
           description: Category not found
-      security:
-        - api_key: []
+
   /user/register:
     post:
       tags:
@@ -333,70 +334,61 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/User'
+              $ref: '#/components/schemas/NewUser'
           application/xml:
             schema:
-              $ref: '#/components/schemas/User'
+              $ref: '#/components/schemas/NewUser'
           application/x-www-form-urlencoded:
             schema:
-              $ref: '#/components/schemas/User'
+              $ref: '#/components/schemas/NewUser'
       responses:
         '200':
-          description: 'successful operation'
+          description: Successful operation
           content:
-            text/plain:
+            application/json:
               schema:
-                type: string
-                example: token
+                $ref: '#/components/schemas/User'
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/User'
 
         '400':
-          description: Empty fields
-        '401':
-          description: Username or email already taken
-  /user/login:
+          description: Not correct data provided
+
+  /user/:
     get:
       tags:
         - user
-      summary: Logs user into the system
+      summary: Get user by user id
       description: ''
-      operationId: loginUser
+      operationId: getUserById
       parameters:
-        - name: username
+        - name: id
           in: query
-          description: The user name for login
-          required: false
-          schema:
-            type: string
-        - name: password
-          in: query
-          description: The password for login in clear text
-          required: false
+          required: true
           schema:
             type: string
       responses:
         '200':
           description: successful operation
-          headers:
-            X-Rate-Limit:
-              description: calls per hour allowed by the user
-              schema:
-                type: integer
-                format: int32
-            X-Expires-After:
-              description: date in UTC when token expires
-              schema:
-                type: string
-                format: date-time
           content:
-            application/xml:
-              schema:
-                type: string
             application/json:
               schema:
-                type: string
+                $ref: '#/components/schemas/User'
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/User'
+        '400':
+          description: Invalid username supplied
         '401':
-          description: Incorrect password or username
-  /user:
+          description: Not logged in
+
+
+        '405':
+          description: User not found
+      security:
+        - api_key: []
+  /user/username:
     get:
       tags:
         - user
@@ -415,15 +407,18 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/UserNoPassword'
+                $ref: '#/components/schemas/NewUser'
             application/xml:
               schema:
-                $ref: '#/components/schemas/UserNoPassword'
+                $ref: '#/components/schemas/NewUser'
         '400':
           description: Invalid username supplied
+        '401':
+          description: Not logged in
         '403':
           description: Access denied
-        '404':
+
+        '405':
           description: User not found
       security:
         - api_key: []
@@ -456,10 +451,10 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/UserNoPassword'
+                $ref: '#/components/schemas/NewUser'
             application/xml:
               schema:
-                $ref: '#/components/schemas/UserNoPassword'
+                $ref: '#/components/schemas/NewUser'
         '400':
           description: Invalid username supplied
         '403':
@@ -491,6 +486,8 @@ paths:
                 $ref: '#/components/schemas/User'
         '400':
           description: Invalid username supplied
+        '401':
+          description: Incorrect password or username
         '403':
           description: Access denied
         '404':
@@ -502,19 +499,19 @@ components:
     NewAdvertisement:
       type: object
       properties:
-        username:
-          type: string
-          example: 1
-        text:
+        description:
           type: string
           example: missing doggie
-        category:
-          $ref:  '#/components/schemas/Category'
-        access:
+        is_global:
           type: string
           enum:
             - local
             - public
+        category_id:
+          $ref:  '#/components/schemas/Category'
+        user_id:
+          $ref:  '#/components/schemas/User'
+
       xml:
         name: advertisement
     Advertisement:
@@ -524,38 +521,22 @@ components:
           type: integer
           format: int64
           example: 1
-        username:
-          type: string
-          example: 1
-        text:
+        description:
           type: string
           example: missing doggie
-        category:
-          $ref:  '#/components/schemas/Category'
-        status:
+
+        is_global:
           type: string
           enum:
             - local
             - public
+        category_id:
+          $ref:  '#/components/schemas/Category'
+        user_id:
+          $ref:  '#/components/schemas/User'
       xml:
         name: advertisement
-    Address:
-      type: object
-      properties:
-        street:
-          type: string
-          example: 7 Sheptytskoho
-        city:
-          type: string
-          example: Novoyavorivsk
-        country:
-          type: string
-          example: Ukraine
-        zip:
-          type: string
-          example: '81053'
-      xml:
-        name: address
+
     Category:
       type: object
       properties:
@@ -569,48 +550,58 @@ components:
       xml:
         name: category
     User:
+
       type: object
       properties:
+        id:
+            type: integer
+            format: int64
+            example: 1
         username:
           type: string
           example: theUser
-        firstName:
+        first_name:
           type: string
           example: John
-        lastName:
+        last_name:
           type: string
           example: James
-        addres:
-          $ref:  '#/components/schemas/Address'
+        address:
+          type: string
+          example: Street smth
         email:
           type: string
           example: john@email.com
         password:
           type: string
           example: '12345'
-        phone:
+        phone_number:
           type: string
           example: '12345'
       xml:
         name: user
-    UserNoPassword:
+    NewUser:
       type: object
       properties:
         username:
           type: string
           example: theUser
-        firstName:
+        first_name:
           type: string
           example: John
-        lastName:
+        last_name:
           type: string
           example: James
         addres:
-          $ref:  '#/components/schemas/Address'
+          type: string
+          example: Street smth
         email:
           type: string
           example: john@email.com
-        phone:
+        password:
+          type: string
+          example: '12345'
+        phone_number:
           type: string
           example: '12345'
       xml:
